Add Mongo Driver and Swagger Packages

--- a/Catalog API/Catalog API.csproj
+++ b/Catalog API/Catalog API.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>Catalog_API</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
+  </ItemGroup>
+
 </Project>
