--- a/Catalog API/appsettings.json
+++ b/Catalog API/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "DatabaseName": "Catalog",
+    "CollectionName": "Items",
+    "Host": "localhost",
+    "Port": 27017
+  }
 }
