--- a/Catalog API/Catalog API.csproj
+++ b/Catalog API/Catalog API.csproj
@@ -1,13 +1,12 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Catalog_API</RootNamespace>
+    <UserSecretsId>f8515e47-a5c6-4c8b-8263-7dd3fc40318e</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
   </ItemGroup>
-
 </Project>
