Add Mongo health check package

--- a/Catalog API/Catalog API.csproj
+++ b/Catalog API/Catalog API.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>f8515e47-a5c6-4c8b-8263-7dd3fc40318e</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="5.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
   </ItemGroup>
