Add Jwt Issuer and Audience

--- a/Catalog API/appsettings.json
+++ b/Catalog API/appsettings.json
@@ -12,5 +12,9 @@
     "CollectionName": "Items",
     "Host": "localhost",
     "Port": 27017
+  },
+  "JwtSettings": {
+    "Issuer": "Catalog localhost Admin",
+    "Audience": "Catalog localhost Admin"
   }
 }
