--- a/Catalog API/Dockerfile
+++ b/Catalog API/Dockerfile
@@ -1,16 +1,10 @@
-FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
-WORKDIR /src
-COPY ["Catalog API.csproj", "./"]
-RUN dotnet restore "Catalog API.csproj"
 COPY . .
-# Publish includes building the project
+RUN dotnet restore "Catalog API.csproj"
 RUN dotnet publish "Catalog API.csproj" -c Release -o /app/publish
 
-FROM base AS final
-WORKDIR /app
-COPY --from=build /app/publish .
-ENTRYPOINT ["dotnet", "Catalog API.dll"]
+FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS final
+ENTRYPOINT ["dotnet", "publish/Catalog API.dll"]
