--- a/Catalog API/appsettings.json
+++ b/Catalog API/appsettings.json
@@ -13,6 +13,10 @@
     "Host": "localhost",
     "Port": 27017
   },
+  "MysqlDbSettings": {
+    "Host": "localhost",
+    "DatabaseName": "Catalog"
+  },
   "JwtSettings": {
     "Issuer": "Catalog localhost Admin",
     "Audience": "Catalog localhost Admin"
